interpreter/tests/golden-files/interpolation.enzo
rebinding this text and 
this is text example 2
just a plain text
rebinding this text and this is text example 2
error: parse error in interpolation
    "100 plus 5 is: <$x + $y>";           // prints “100 plus 5 is: 105”
                    ^
error: parse error in interpolation
    $text-about-colors-list: "color <$i> is <$colors.$i>";
                                    ^
error: undefined: $text-about-colors-list
    $text-about-colors-list;   // prints “color 2 is green”
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
7
3
Sum=10 Prod=21
{ $greeting: "hi", $nums: [ 2, 4 ] }
hi! The nums are:2, and 4
π≈3.14
π≈3.14
foo\nbar
foo\"bar\"baz
foo\"bar\"baz
error: parse error in interpolation
    "text <bad syntax>";    // error: undefined variable or parse error in interp
          ^
error: parse error in interpolation
    "hello <$foo + >";      // error: parse error in interpolation
           ^
error: parse error in interpolation
    "hello <<$foo>>";       // error: nested <...> not allowed (for now)
           ^
